terraform/2-kubernetes/assets/sample-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
  labels:
    app.kubernetes.io/name: sample
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sample
